Add house to booking
