# Risager-Manager/Models/House.cs
@@ -5,6 +5,8 @@
         public int Id { get; set; }
         public string Name { get; set; }
         public string Description { get; set; }
+        public string ImageSrc { get; set; }
+        public int NumberOfBeds { get; set; }
         public IEnumerable<Booking> Bookings { get; set; }
     }
 }
